--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -59,3 +59,9 @@ html, body {
   .about h2 {
     color: #555;
   }
+
+  .about p {
+    font-size: 1.2em;
+    margin: 10px 0;
+    color: #555;
+  }
