--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -35,7 +35,7 @@ nav ul li a:hover {
   text-align: center;
   padding: 1rem;
   margin-top: auto; /* Spinge il footer in basso */
-  position: sticky;
+  position: fixed;
   bottom: 0;
   width: 100%; /* Assicura che occupi tutta la larghezza */
 }
